--- a/app/assets/stylesheets/style.scss
+++ b/app/assets/stylesheets/style.scss
@@ -426,6 +426,19 @@ h4
 			font-size: 50px;
 		}
 	}
+	.peopleAttending
+	{
+		margin-top: 20px;
+		i
+		{
+			margin-top: 10px;
+		}
+		img
+		{
+			margin-top: -25px;
+		}
+	}
+	
 }
 /*******************************************************************/
 /* Devise Page Styles */
