Fixed the join form. Still needs a lot of testing

--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -122,7 +122,7 @@
 
           <div class="form-group">
               <%= f.label :seats, "Number of people attending" %>
-              <%= f.number_field :seats, :required => true, :min => 1, :class => "form-control", :placeholder => "Number of people attending including you" %>
+              <%= f.number_field :seats, :required => true, :class => "form-control", :placeholder => "Number of people attending including you" %>
           </div>
           <div class="form-group">
             <%= f.label :phone_number, "Phone number"%>
