--- a/app/views/events/_menu.html.erb
+++ b/app/views/events/_menu.html.erb
@@ -1,40 +1,17 @@
 <% counter = 1%>
-<% events_counter = 0 %>
+
 <% total_items = @menu_items_categorized.count%>
 
 <% @menu_items_categorized.each do |course_name, menu_items|%>
-	<% if counter == 1 %>
-		<div class="row">
-		<%= render 'menu_item', :course_name => course_name, :menu_items => menu_items  %>
-		<% events_counter = events_counter + 1 %>
 
-		<% if events_counter >= total_items %>
-			</div>
-			<% counter = counter + 1%>	
-			<% events_counter = events_counter + 1 %>
-		<% else %>
-			<% counter = counter + 1%>	
-			<% events_counter = events_counter + 1 %>
-		<% end %>
-			
-	<% else %>
-	
+	<% if counter%2 == 0 %>
 		<%= render 'menu_item', :course_name => course_name, :menu_items => menu_items  %>
 		</div>
-		
-		<% if events_counter >= total_items %>
-			
-		<% else %>
-			<% counter = 1 %>
-			<% events_counter = events_counter + 1 %>	
-		<% end %>
-		
+		<% counter = counter + 1 %>
+	<% else %>
+		<div class="row">
+		<%= render 'menu_item', :course_name => course_name, :menu_items => menu_items  %>
+		<% counter = counter + 1 %>	
 	<% end %>
-
-<% end %>
-
-<% if counter != 2%>
-	
-	</div>
 <% end %>
 
