--- a/app/views/events/_menu.html.erb
+++ b/app/views/events/_menu.html.erb
@@ -1,5 +1,5 @@
 <% counter = 1%>
-
+<% events_counter = 0 %>
 <% total_items = @menu_items_categorized.count%>
 
 <% @menu_items_categorized.each do |course_name, menu_items|%>
@@ -8,10 +8,19 @@
 		<%= render 'menu_item', :course_name => course_name, :menu_items => menu_items  %>
 		</div>
 		<% counter = counter + 1 %>
+		<% events_counter = events_counter + 1 %>
+		
 	<% else %>
 		<div class="row">
 		<%= render 'menu_item', :course_name => course_name, :menu_items => menu_items  %>
 		<% counter = counter + 1 %>	
+		<% events_counter = events_counter + 1 %>
+		
+		<% if events_counter == total_items %>
+			</div>
+		<% else %>
+			
+		<% end %>
 	<% end %>
 <% end %>
 
