Fixed the issue where the date and time of the event was left over from the redesign i.e. it was a dummy value. Changed it on the event show page and the homepage to reflect the actual value stored in the db

--- a/app/views/events/_event_item.html.erb
+++ b/app/views/events/_event_item.html.erb
@@ -9,7 +9,8 @@
 			<% end %>
 			
 			<div class="eventDate">
-				<span><%= event.event_date.strftime("%A %d - %B")%> </span>
+
+				<span><%= event.event_date.strftime("%A, %d %B %Y") %> <%= event.event_time.strftime("%I:%M%p") %> </span>
 			</div>
 			<div class="seatsLeft">
 				<%= event.seats_left %> Seats Left
