Added the basic form to the event new page in the admin section. Added functionality for the restaurant select. Still need to modify the layout to use the rails helper tags and check if the data is getting stored into the database properly

--- a/app/views/admin/event/_form.html.erb
+++ b/app/views/admin/event/_form.html.erb
@@ -1,4 +1,270 @@
 <%= form_for(@event, :html => {:multipart => true}) do |f| %>
+
+<%# Event details tab start %>
+
+<div class="container">
+  <div class="row">
+    <div class="col-md-12 newEventPage expandable-panel" id="cp-1">
+
+      <div class="newEventSummary">
+        <h4>
+          <div class="initialHeader">
+            <span class="step">1</span>
+            <span class="text">Fill In The Event Details</span>
+          </div>
+          <div class="successHeader">
+            <span><i class="icon-ok-sign finished"></i></span>
+            <span class="text">Event Details Completed</span>
+            <a href="#" class="pull-right">Modify Event Details</a>
+          </div>
+        </h4>
+      </div>
+
+      <div class="expandable-panel-content">
+        <div class="row">
+          <div class="col-md-6">
+            <label>Select the kind of event you want to conduct</label>
+            <div class="radio">
+            <label>
+            <input type="radio" name="optionsRadios" id="optionsRadios1" value="option1" checked>
+            Private Event - You have to share the url with your friends
+            </label>
+            </div>
+            <div class="radio">
+            <label>
+            <input type="radio" name="optionsRadios" id="optionsRadios2" value="option2">
+            Public Event - Listed on the LetsDine homepage
+            </label>
+            </div>
+          </div>
+          <div class="col-md-6">
+            <label>Where do you want to conduct the event?</label>
+           <div class="citySelect">Select city</div>
+           </div>
+          </div>
+
+          <div class="row">
+            <div class="col-md-6">
+              <div class="form-group">
+                <label for="event_name">Event name</label>
+                <input type="text" class="form-control" id="event_name" placeholder="Enter the event name">
+              </div>
+            </div>
+            <div class="col-md-6">
+              <label for="event_name">Maximum number of people that can attend</label>
+              <input type="number" class="form-control" id="max_seats" placeholder="Enter the maximum number of people that can attend">
+            </div>
+          </div>
+
+          <div class="row">
+            <div class="col-md-12">
+              <label for="event_description">Description for this event</label>
+              <textarea class="form-control" rows="3" placeholder="Enter a description for this event"></textarea>
+            </div>
+          </div>
+
+          <div class="row">
+            <div class="col-md-12">
+              <a href="#" class="btn btn-primary nextStep">Event details completed</a>
+            </div>
+          </div>
+
+      </div>
+
+    </div>
+  </div>
+</div>
+<%# Event details tab end %>
+
+<%# Event Date and Time tab start %>
+<div class="container">
+  <div class="row">
+    <div class="col-md-12 newEventPage expandable-panel" id="cp-2">
+      <div class="newEventSummary">
+        <h4>
+          <div class="initialHeader">
+            <span class="step">2</span>
+            <span class="text">Fill In The Event Date and Time</span>
+          </div>
+          <div class="successHeader">
+            <span><i class="icon-ok-sign finished"></i></span>
+            <span class="text">Event Date and Time Completed</span>
+            <a href="#" class="pull-right">Modify Event Date and Time</a>
+          </div>
+        </h4>
+      </div>
+
+      <div class="expandable-panel-content">
+            <div class="row">
+              <div class="col-md-12">
+                <div class="alert alert-info" id="dateTimeAlert">
+                  <strong>Event timing:</strong>
+                  Your event will be conducted on <strong id="infoDate"></strong> at <strong id="infoTime"></strong>
+                </div>
+              </div>
+            </div>
+            <div class="row">
+              <div class="col-md-6">
+
+
+                <div id="calendar"></div>
+
+
+              </div>
+              <div class="col-md-6">
+                <div class="timeHeader" id="showDate">
+                  Monday, 23 September 2013
+                </div>
+                <div class="timeSubHeader">
+                  Morning & Afternoon
+                </div>
+                <table class="timeTable" id="morning">
+                  <tr>
+                    <td>09:00</td>
+                    <td>09:30</td>
+                    <td>10:00</td>
+                    <td>10:30</td>
+                  </tr>
+                  <tr>
+                    <td>11:00</td>
+                    <td>11:30</td>
+                    <td>12:00</td>
+                    <td>12:30</td>
+                  </tr>
+                </table>
+                <div class="timeSubHeader">
+                  Evening
+                </div>
+                <table class="timeTable" id="evening">
+                  <tr>
+                    <td>06:00</td>
+                    <td>06:30</td>
+                    <td>7:00</td>
+                    <td>7:30</td>
+                  </tr>
+                  <tr>
+                    <td>8:00</td>
+                    <td>8:30</td>
+                    <td>9:00</td>
+                    <td>9:30</td>
+                  </tr>
+                </table>
+                
+
+              </div>
+            </div>
+            <div class="row">
+              <div class="col-md-12">
+                <a href="#" class="btn btn-primary nextStep">Finished selecting date and time</a>
+              </div>
+            </div>
+          </div>
+
+    </div>
+  </div>
+</div>
+<%# Event Date and Time tab end %>
+
+<%# Restaurant select tab start %>
+<div class="container">
+  <div class="row">
+    <div class="col-md-12 newEventPage expandable-panel" id="cp-3">
+      <div class="newEventSummary">
+        <h4>
+          <div class="initialHeader">
+            <span class="step">3</span>
+            <span class="text">Fill In The Event Date and Time</span>
+          </div>
+          <div class="successHeader">
+            <span><i class="icon-ok-sign finished"></i></span>
+            <span class="text">Event Date and Time Completed</span>
+            <a href="#" class="pull-right">Modify Event Date and Time</a>
+          </div>
+        </h4>
+      </div>
+
+      <div class="expandable-panel-content">
+        <div class="row">
+          <div class="col-md-5">
+            <ul class="restaurantDetails">
+              <% @restaurants.each do |restaurant| %>
+                <li class="<%= restaurant.city %>">
+                  <% restaurantHiddenFieldId = "restaurant_id_" + restaurant.id.to_s %>
+                  <%= hidden_field_tag restaurantHiddenFieldId, restaurant.id  %>
+                  <h4><%= restaurant.name %></h4>
+                  <% if restaurant.city == "Kuala Lumpur" || restaurant.city == "Selangor" || restaurant.city == "Perak" || restaurant.city == "Penang" %>
+                    <h4><span>RM <%= restaurant.price %> per person</span></h4>  
+                  <% else %>
+                    <h4><span>Rs <%= restaurant.price %> per person</span></h4>
+                  <% end %>
+                </li>  
+              <% end %>
+              
+            </ul>
+          </div>
+          <div class="col-md-7">
+            <% @restaurants.each do |restaurant| %>
+
+              <div class="retaurantMenu" id="<%= restaurant.id %>">
+                    <div class="menuTopBar">
+
+                      <div class="row">
+                        <div class="col-md-3">
+                          <% if restaurant.photo_url(:thumb).to_s.blank? %>
+                          <% else %>
+                            <%= image_tag restaurant.photo_url(:thumb).to_s, :style => "width:150px;height:150px;" %>                            
+                          <% end %>
+                        </div>
+                        <div class="col-md-7">
+                          <h2><%= restaurant.name %></h2>
+                          <div class="row">
+                            <div class="col-md-12">
+                              <%= restaurant.address %>
+                            </div>
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+
+                    <!--
+                    <div class="newEventRestaurantDescription">
+                      Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent laoreet diam est, ac eleifend nisi laoreet in. In magna erat, volutpat a tristique eu, ornare pretium lacus. Aenean vel leo sapien. Morbi quis magna eget turpis varius eleifend. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. In gravida condimentum imperdiet. Nulla interdum semper pharetra. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Proin lectus leo, bibendum eu nulla non, ornare pharetra mauris. Curabitur nec libero at neque ullamcorper hendrerit vel eu massa. Nam fermentum pharetra pharetra.
+                    </div>
+                    -->
+
+                    <div class="newEventRestaurantSeatingDetails">
+                      <h2>Menu</h2>
+                      <% menu_items = restaurant.menu_items %>
+                      <% @menu_items_categorized = menu_items.group_by { |menu_item| menu_item.course_name} %>
+                      <%= render partial: 'events/menu',  :locals => {:menu_items_categorized => @menu_items_categorized} %>
+                      
+                    </div>
+
+                  </div>
+                <% end %>
+          </div>
+        </div>
+      </div>      
+
+    </div>
+  </div>
+</div>
+<%# Restaurant select tab end %>
+
+<% end %>
+
+
+
+
+
+
+
+
+
+
+
+
+<%= form_for(@event, :html => {:multipart => true}) do |f| %>
   <% if @event.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(@event.errors.count, "error") %> prohibited this event from being saved:</h2>
@@ -213,13 +479,3 @@
 
     
 <% end %>  
-
-<script type="text/javascript">
-  $(document).ready(function(){
-    $('#dp3').datepicker();
-    $('#event_event_time').timepicker();
-  });
-</script>
-
-<script>   $(document).ready(function(){     $('#myTab a:last').tab('show');
-}); </script>
