--- a/app/assets/stylesheets/admin/admin.css
+++ b/app/assets/stylesheets/admin/admin.css
@@ -126,3 +126,301 @@ ul.event_list {
   color: white; }
 
 /******************************************************************************/
+/* New Event Styling */
+/******************************************************************************/
+.newEventHeading {
+  margin-bottom: 0; }
+
+.event {
+  background: white;
+  margin-top: 40px; }
+
+.newEventPage {
+  background: white;
+  margin-top: 40px;
+  padding: 0;
+  -webkit-box-shadow: 1px 0px 10px rgba(50, 50, 50, 0.2);
+  -moz-box-shadow: 1px 0px 10px rgba(50, 50, 50, 0.2);
+  box-shadow: 1px 0px 10px rgba(50, 50, 50, 0.2);
+  -moz-border-radius: 0px;
+  -webkit-border-radius: 6px 6px 6px 6px;
+  border-radius: 6px 6px 6px 6px; }
+  .newEventPage h1 {
+    padding: 20px 20px 0 20px; }
+  .newEventPage h3 {
+    margin: 0;
+    font-weight: bold; }
+  .newEventPage .menuItemsHeader {
+    display: block;
+    margin-top: 10px; }
+  .newEventPage .menuItemExplanation {
+    font-style: italic;
+    margin: 5px 0;
+    padding: 0; }
+  .newEventPage .menuItems {
+    margin: 0 0 0 20px;
+    padding: 0; }
+  .newEventPage .restaurantDetails {
+    padding: 0;
+    margin: 0;
+    list-style: none;
+    color: #959595; }
+    .newEventPage .restaurantDetails li {
+      padding: 10px 20px;
+      border-bottom: 1px solid #e4e4e4; }
+      .newEventPage .restaurantDetails li:hover {
+        background: #f6f7f9;
+        cursor: pointer; }
+      .newEventPage .restaurantDetails li span {
+        color: #6b6b69;
+        font-weight: bold; }
+  .newEventPage .retaurantMenu {
+    border: 1px solid #e4e4e4;
+    margin-left: -30px; }
+    .newEventPage .retaurantMenu .menuTopBar {
+      padding: 10px 20px;
+      background: #f6f7f9;
+      margin-bottom: 90px; }
+      .newEventPage .retaurantMenu .menuTopBar h1 {
+        padding: 0;
+        margin: 0; }
+      .newEventPage .retaurantMenu .menuTopBar h2 {
+        padding: 0;
+        margin: 0; }
+      .newEventPage .retaurantMenu .menuTopBar img {
+        margin-bottom: -75px;
+        border: 4px solid #fff;
+        -webkit-box-shadow: 1px 0px 10px rgba(50, 50, 50, 0.2);
+        -moz-box-shadow: 1px 0px 10px rgba(50, 50, 50, 0.2);
+        box-shadow: 1px 0px 10px rgba(50, 50, 50, 0.2);
+        -moz-border-radius: 0px;
+        -webkit-border-radius: 3px 3px 3px 3px;
+        border-radius: 3px 3px 3px 3px; }
+    .newEventPage .retaurantMenu .newEventRestaurantDescription {
+      padding: 10px 20px;
+      font-style: italic; }
+    .newEventPage .retaurantMenu .newEventRestaurantSeatingDetails {
+      padding: 10px 20px; }
+      .newEventPage .retaurantMenu .newEventRestaurantSeatingDetails strong {
+        display: block; }
+      .newEventPage .retaurantMenu .newEventRestaurantSeatingDetails .description {
+        font-style: italic; }
+  .newEventPage .step {
+    background: #cccccc;
+    border-radius: 0.8em;
+    -moz-border-radius: 0.8em;
+    -webkit-border-radius: 0.8em;
+    color: #ffffff;
+    display: inline-block;
+    font-weight: bold;
+    line-height: 1.6em;
+    margin-right: 5px;
+    text-align: center;
+    width: 1.6em;
+    font-size: 24px;
+    margin-right: 12px; }
+
+/* Panels */
+.newEventSummary {
+  padding: 20px; }
+  .newEventSummary h4 {
+    display: inline; }
+    .newEventSummary h4 i {
+      margin-right: 20px;
+      margin-top: -10px;
+      font-size: 40px;
+      float: left;
+      color: #ccc; }
+    .newEventSummary h4 text {
+      margin-bottom: 50px; }
+    .newEventSummary h4 .finished {
+      color: #1aa248; }
+
+/* Collapsible panels */
+.expandable-panel-content {
+  padding: 20px; }
+
+.nextStep {
+  margin-top: 20px;
+  background: #1aa248;
+  border: 1px solid #137634; }
+  .nextStep:hover {
+    background: #137634; }
+
+.datepicker {
+  width: 100%;
+  text-align: center; }
+  .datepicker td {
+    padding: 10px; }
+  .datepicker .datePickerNav {
+    background: #d8d8d8;
+    color: #acacac;
+    font-size: 30px; }
+    .datepicker .datePickerNav:hover {
+      background: #767676;
+      color: white;
+      cursor: pointer; }
+  .datepicker .daysHeading {
+    color: #9c9c9c;
+    font-weight: bold; }
+  .datepicker .month {
+    border-bottom: 1px solid #d8d8d8;
+    border-top: 1px solid #d8d8d8; }
+  .datepicker .days td {
+    border: 1px solid #e1e1e1;
+    color: #767676; }
+    .datepicker .days td:hover {
+      background: #1b6e8a;
+      color: #fff;
+      cursor: pointer; }
+  .datepicker .days .over {
+    color: #d2d2d2; }
+    .datepicker .days .over:hover {
+      background: white;
+      color: #d2d2d2;
+      cursor: none; }
+
+.timeHeader {
+  background: #1b6e8a;
+  padding: 10px;
+  text-align: center;
+  color: white; }
+
+.timeSubHeader {
+  margin-top: 10px;
+  border-bottom: 1px solid #d8d8d8; }
+
+.timeTable {
+  width: 100%;
+  margin-top: 10px;
+  padding: 10px; }
+  .timeTable td {
+    background: #d8d8d8;
+    border: 18px solid white;
+    text-align: center;
+    color: #747474;
+    padding: 10px;
+    font-weight: bold; }
+    .timeTable td:hover {
+      background-color: #1b6e8a;
+      color: white;
+      cursor: pointer; }
+
+/* JQuery UI - calendar styling */
+.ui-datepicker,
+.ui-datepicker table,
+.ui-datepicker tr,
+.ui-datepicker td,
+.ui-datepicker th {
+  margin: 0;
+  padding: 0;
+  border: none;
+  border-spacing: 0; }
+
+.ui-datepicker table {
+  width: 100%;
+  text-align: center; }
+
+.ui-datepicker-header {
+  position: relative;
+  margin-bottom: 20px;
+  border-bottom: 1px solid #d8d8d8;
+  border-top: 1px solid #d8d8d8;
+  padding-top: 15px;
+  padding-bottom: 14px; }
+
+.ui-datepicker-title {
+  text-align: center; }
+
+.ui-datepicker-month {
+  position: relative;
+  padding-right: 15px;
+  color: #565656; }
+
+.ui-datepicker-year {
+  padding-left: 8px;
+  color: #a8a8a8; }
+
+.ui-datepicker-month {
+  font-weight: bold; }
+
+.ui-datepicker-prev,
+.ui-datepicker-next {
+  position: absolute;
+  top: -1px;
+  background: #d8d8d8;
+  padding: 10px;
+  cursor: pointer; }
+
+.ui-datepicker-prev {
+  left: 0;
+  background: #d8d8d8;
+  padding: 5px 20px;
+  color: #acacac;
+  font-size: 30px; }
+  .ui-datepicker-prev:hover {
+    background: #767676;
+    color: white;
+    cursor: pointer; }
+
+.ui-datepicker-next {
+  right: 0;
+  padding: 5px 20px;
+  color: #acacac;
+  font-size: 30px; }
+  .ui-datepicker-next:hover {
+    background: #767676;
+    color: white;
+    cursor: pointer; }
+
+.ui-datepicker-prev span {
+  background-position: 0px 0px; }
+
+.ui-datepicker-next span {
+  background-position: -5px 0px; }
+
+.ui-datepicker-prev-hover span {
+  background-position: 0px -10px; }
+
+.ui-datepicker-next-hover span {
+  background-position: -5px -10px; }
+
+table.ui-datepicker-calendar {
+  text-align: center; }
+  table.ui-datepicker-calendar th {
+    text-align: center;
+    padding-bottom: 10px;
+    color: #9c9c9c; }
+  table.ui-datepicker-calendar td {
+    border: 1px solid #e1e1e1;
+    color: #767676;
+    padding: 10px; }
+    table.ui-datepicker-calendar td:hover {
+      background: #1b6e8a;
+      color: #fff;
+      cursor: pointer; }
+      table.ui-datepicker-calendar td:hover a {
+        color: white;
+        text-decoration: none; }
+    table.ui-datepicker-calendar td a {
+      color: #767676; }
+  table.ui-datepicker-calendar td.ui-state-disabled {
+    color: #d2d2d2; }
+    table.ui-datepicker-calendar td.ui-state-disabled:hover {
+      background: white;
+      color: #d2d2d2;
+      cursor: none; }
+  table.ui-datepicker-calendar .ui-state-active {
+    color: white; }
+  table.ui-datepicker-calendar .ui-datepicker-current-day {
+    background: #1b6e8a; }
+
+/******************************************************************************/
+/* Dashboard Styling */
+/******************************************************************************/
+/******************************************************************************/
+/* Dashboard Styling */
+/******************************************************************************/
+/******************************************************************************/
+/* Dashboard Styling */
+/******************************************************************************/
