--- a/app/views/events/_menu.html.erb
+++ b/app/views/events/_menu.html.erb
@@ -5,14 +5,14 @@
 <% @menu_items_categorized.each do |course_name, menu_items|%>
 
 	<% if counter%2 == 0 %>
-		<%= render 'menu_item', :course_name => course_name, :menu_items => menu_items  %>
+		<%= render 'events/menu_item', :course_name => course_name, :menu_items => menu_items  %>
 		</div>
 		<% counter = counter + 1 %>
 		<% events_counter = events_counter + 1 %>
 		
 	<% else %>
 		<div class="row">
-		<%= render 'menu_item', :course_name => course_name, :menu_items => menu_items  %>
+		<%= render 'events/menu_item', :course_name => course_name, :menu_items => menu_items  %>
 		<% counter = counter + 1 %>	
 		<% events_counter = events_counter + 1 %>
 		
